--- a/codeAcademy/jQueryProjects/threadly/index.html
+++ b/codeAcademy/jQueryProjects/threadly/index.html
@@ -28,6 +28,6 @@
     </div>
 
     <script src="https://s3.amazonaws.com/codecademy-content/projects/jquery.min.js"></script>
-    <script src='script.js'></script>
+    <script src='app.js'></script>
   </body>
 </html>
